--- a/css/theme/source/gdisunny.scss
+++ b/css/theme/source/gdisunny.scss
@@ -9,7 +9,7 @@ $mainColor: #333;
 $headingLetterSpacing: -0.08em;
 $headingTextShadow: none;
 $backgroundColor: #f7fbfc;
-$linkColor: #92BB44;
+$linkColor: #0091c9;
 $selectionBackgroundColor: #134674;
 
 // Background generator
@@ -17,6 +17,22 @@ $selectionBackgroundColor: #134674;
 	@include radial-gradient( lighten(#EDAB23, 40% ), #f7fbfc );
 }
 
+// Override reveal.css
+.green {
+	color: #009a89;
+}
+.blue {
+	color: #0000ff;
+}
+.yellow {
+	color: #da7d2e;
+}
+a {
+	text-decoration: underline !important;
+}
+h4, h6 {
+	color: lighten($headingColor, 8%) !important;
+}
 
 // Theme template ------------------------------
 @import "../template/theme";
