--- a/css/theme/template/settings.scss
+++ b/css/theme/template/settings.scss
@@ -40,8 +40,8 @@ $mainFontSize: 36px;
 $mainColor: #eee;
 
 // Headings
-$headingFont: 'Gotham-Bold', Impact, sans-serif;
-$headingColor: #F05B62;
+$headingFont: 'Montserrat', sans-serif;
+$headingColor: #F05B62; 
 $headingLineHeight: 0.9em;
 $headingLetterSpacing: 0.02em;
 $headingTextTransform: uppercase;
