--- a/css/theme/gdisunny.css
+++ b/css/theme/gdisunny.css
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: "Gotham-Italic";
-  src: local("Gotham-Italic"), url("fonts/Gotham/Gotham-MediumItalic.otf") format("opentype");
+  src: local("Gotham-Italic"), url("fonts/Gotham/Gotham-MediumIta.otf") format("opentype");
   font-weight: normal;
   font-style: italic; }
 
@@ -21,6 +21,21 @@
   src: local("Gotham-Bold"), url("fonts/Gotham/Gotham-Bold.otf") format("opentype");
   font-weight: bold;
   font-style: bold; }
+
+.green {
+  color: #009a89; }
+
+.blue {
+  color: #0000ff; }
+
+.yellow {
+  color: #da7d2e; }
+
+a {
+  text-decoration: underline !important; }
+
+h4, h6 {
+  color: #f38086 !important; }
 
 /*********************************************
  * GLOBAL STYLES
@@ -56,9 +71,9 @@ body {
 .reveal h4,
 .reveal h5,
 .reveal h6 {
-  margin: 0 0 20px 0;
+  margin: 10px 0 20px 0;
   color: #f05b62;
-  font-family: "Gotham-Bold", Impact, sans-serif;
+  font-family: "Montserrat", sans-serif;
   line-height: 0.9em;
   letter-spacing: -0.08em;
   text-transform: uppercase;
@@ -71,7 +86,7 @@ body {
  * LINKS
  *********************************************/
 .reveal a:not(.image) {
-  color: #92bb44;
+  color: #0091c9;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
@@ -86,7 +101,7 @@ body {
 
 .reveal .roll span:after {
   color: #fff;
-  background: #92bb44; }
+  background: #0091c9; }
 
 /*********************************************
  * IMAGES
@@ -101,10 +116,13 @@ body {
   -ms-transition: all .2s linear;
   -o-transition: all .2s linear;
   transition: all .2s linear; }
+  .reveal section img.badge {
+    border: none;
+    box-shadow: none; }
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #92bb44;
+  border-color: #0091c9;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
@@ -112,19 +130,19 @@ body {
  *********************************************/
 .reveal .controls div.left,
 .reveal .controls div.left.enabled {
-  border-right-color: #92bb44; }
+  border-right-color: #0091c9; }
 
 .reveal .controls div.right,
 .reveal .controls div.right.enabled {
-  border-left-color: #92bb44; }
+  border-left-color: #0091c9; }
 
 .reveal .controls div.up,
 .reveal .controls div.up.enabled {
-  border-bottom-color: #92bb44; }
+  border-bottom-color: #0091c9; }
 
 .reveal .controls div.down,
 .reveal .controls div.down.enabled {
-  border-top-color: #92bb44; }
+  border-top-color: #0091c9; }
 
 .reveal .controls div.left.enabled:hover {
   border-right-color: #f9b8bb; }
@@ -145,7 +163,7 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #92bb44;
+  background: #0091c9;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
