--- a/css/theme/gdisunny.css
+++ b/css/theme/gdisunny.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
   font-family: "Gotham";
   src: local("Gotham"), url("fonts/Gotham/Gotham-Medium.otf") format("opentype");
   font-weight: normal;
@@ -21,7 +21,7 @@
   src: local("Gotham-Bold"), url("fonts/Gotham/Gotham-Bold.otf") format("opentype");
   font-weight: bold;
   font-style: bold; }
-
+*/
 .green {
   color: #009a89; }
 
@@ -88,11 +88,11 @@ body {
 .reveal a:not(.image) {
   color: #0091c9;
   text-decoration: none;
-  -webkit-transition: color .15s ease;
+/*  -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   -ms-transition: color .15s ease;
   -o-transition: color .15s ease;
-  transition: color .15s ease; }
+  transition: color .15s ease;*/ }
 
 .reveal a:not(.image):hover {
   color: #f9b8bb;
