--- a/css/theme/gdisunny.css
+++ b/css/theme/gdisunny.css
@@ -37,6 +37,14 @@ a {
 h4, h6 {
   color: #f38086 !important; }
 
+.reveal .command-line {
+  font-size:1.5em;
+  line-height: 1.5em;
+}
+.reveal .regexp { 
+  color: #000; 
+}
+
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
@@ -77,10 +85,16 @@ body {
   line-height: 0.9em;
   letter-spacing: -0.08em;
   text-transform: uppercase;
-  text-shadow: none; }
+  text-shadow: none; 
+}
 
 .reveal h1 {
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2); }
+
+.reveal h3 {
+  margin-bottom: 5px;
+  font-size: 1.2em;
+}
 
 /*********************************************
  * LINKS
