modified code snippet styles and spacing and such

--- a/css/theme/template/theme.scss
+++ b/css/theme/template/theme.scss
@@ -23,6 +23,13 @@ body {
 	text-shadow: none; 
 }
 
+.reveal pre code {
+	font-size: 1.4em;
+	line-height: 1.4em;
+}
+
+.reveal pre .regexp { color: #4d4d4c; }
+
 /*********************************************
  * HEADERS
  *********************************************/
@@ -48,6 +55,10 @@ body {
 	text-shadow: $heading1TextShadow;
 }
 
+.reveal h3 {
+	font-size: 1.25em;
+	margin-bottom: 5px;
+}
 
 /*********************************************
  * LINKS
