--- a/css/theme/gdilight.css
+++ b/css/theme/gdilight.css
@@ -47,6 +47,13 @@ body {
   background: rgba(11, 79, 81, 0.99);
   text-shadow: none; }
 
+.reveal pre code {
+  font-size: 1.4em;
+  line-height: 1.4em; }
+
+.reveal pre .regexp {
+  color: #4d4d4c; }
+
 /*********************************************
  * HEADERS
  *********************************************/
@@ -66,6 +73,10 @@ body {
 
 .reveal h1 {
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2); }
+
+.reveal h3 {
+  font-size: 1.25em;
+  margin-bottom: 5px; }
 
 /*********************************************
  * LINKS
