--- a/css/theme/gdisunny.css
+++ b/css/theme/gdisunny.css
@@ -1,4 +1,4 @@
-/*@font-face {
+@font-face {
   font-family: "Gotham";
   src: local("Gotham"), url("fonts/Gotham/Gotham-Medium.otf") format("opentype");
   font-weight: normal;
@@ -21,7 +21,7 @@
   src: local("Gotham-Bold"), url("fonts/Gotham/Gotham-Bold.otf") format("opentype");
   font-weight: bold;
   font-style: bold; }
-*/
+
 .green {
   color: #009a89; }
 
@@ -36,14 +36,6 @@ a {
 
 h4, h6 {
   color: #f38086 !important; }
-
-.reveal .command-line {
-  font-size:1.5em;
-  line-height: 1.5em;
-}
-.reveal .regexp { 
-  color: #000; 
-}
 
 /*********************************************
  * GLOBAL STYLES
@@ -70,6 +62,13 @@ body {
   background: #134674;
   text-shadow: none; }
 
+.reveal pre code {
+  font-size: 1.4em;
+  line-height: 1.4em; }
+
+.reveal pre .regexp {
+  color: #4d4d4c; }
+
 /*********************************************
  * HEADERS
  *********************************************/
@@ -85,16 +84,14 @@ body {
   line-height: 0.9em;
   letter-spacing: -0.08em;
   text-transform: uppercase;
-  text-shadow: none; 
-}
+  text-shadow: none; }
 
 .reveal h1 {
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2); }
 
 .reveal h3 {
-  margin-bottom: 5px;
-  font-size: 1.2em;
-}
+  font-size: 1.25em;
+  margin-bottom: 5px; }
 
 /*********************************************
  * LINKS
@@ -102,11 +99,11 @@ body {
 .reveal a:not(.image) {
   color: #0091c9;
   text-decoration: none;
-/*  -webkit-transition: color .15s ease;
+  -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   -ms-transition: color .15s ease;
   -o-transition: color .15s ease;
-  transition: color .15s ease;*/ }
+  transition: color .15s ease; }
 
 .reveal a:not(.image):hover {
   color: #f9b8bb;
