--- a/css/theme/css/gdicool.css
+++ b/css/theme/css/gdicool.css
@@ -26,14 +26,14 @@
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: white;
-  background: -moz-radial-gradient(center, circle cover, #f2f2f2 0%, white 100%);
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #f2f2f2), color-stop(100%, white));
-  background: -webkit-radial-gradient(center, circle cover, #f2f2f2 0%, white 100%);
-  background: -o-radial-gradient(center, circle cover, #f2f2f2 0%, white 100%);
-  background: -ms-radial-gradient(center, circle cover, #f2f2f2 0%, white 100%);
-  background: radial-gradient(center, circle cover, #f2f2f2 0%, white 100%);
-  background-color: white; }
+  background: #e9f1da;
+  background: -moz-radial-gradient(center, circle cover, #f7fbfc 0%, #e9f1da 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #f7fbfc), color-stop(100%, #e9f1da));
+  background: -webkit-radial-gradient(center, circle cover, #f7fbfc 0%, #e9f1da 100%);
+  background: -o-radial-gradient(center, circle cover, #f7fbfc 0%, #e9f1da 100%);
+  background: -ms-radial-gradient(center, circle cover, #f7fbfc 0%, #e9f1da 100%);
+  background: radial-gradient(center, circle cover, #f7fbfc 0%, #e9f1da 100%);
+  background-color: #92bb44; }
 
 .reveal {
   font-family: "Gotham-Book", "Helvetica", Arial, sans-serif;
@@ -44,7 +44,7 @@ body {
 
 ::selection {
   color: white;
-  background: rgba(11, 79, 81, 0.99);
+  background: #134674;
   text-shadow: none; }
 
 .reveal pre code {
@@ -53,6 +53,26 @@ body {
 
 .reveal pre .regexp {
   color: #4d4d4c; }
+
+table.code-compare {
+  position: relative;
+  left: -180px;
+  width: 1300px; }
+  table.code-compare td {
+    width: 800px; }
+    table.code-compare td p {
+      margin-left: 30px;
+      font-weight: bold; }
+    table.code-compare td .output-example {
+      padding: 10px;
+      width: 380px;
+      height: 80px;
+      font-weight: normal;
+      text-align: center; }
+
+.grayscale {
+  background: gray;
+  color: black; }
 
 /*********************************************
  * HEADERS
@@ -64,12 +84,12 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 10px 0 20px 0;
-  color: #f05b62;
+  color: #8b0036;
   font-family: "Montserrat", sans-serif;
   line-height: 0.9em;
   letter-spacing: 0.02em;
-  text-transform: none;
-  text-shadow: #cccccc; }
+  text-transform: uppercase;
+  text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2); }
 
 .reveal h1 {
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2); }
@@ -160,8 +180,10 @@ body {
 
 .reveal .progress span {
   background: #01a9b4;
-  -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  -o-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+  /*
+  		-webkit-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  		   -moz-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  		    -ms-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  		     -o-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  		        transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  */ }
