--- a/css/theme/css/gdidefault.css
+++ b/css/theme/css/gdidefault.css
@@ -54,6 +54,26 @@ body {
 .reveal pre .regexp {
   color: #4d4d4c; }
 
+table.code-compare {
+  position: relative;
+  left: -180px;
+  width: 1300px; }
+  table.code-compare td {
+    width: 800px; }
+    table.code-compare td p {
+      margin-left: 30px;
+      font-weight: bold; }
+    table.code-compare td .output-example {
+      padding: 10px;
+      width: 380px;
+      height: 80px;
+      font-weight: normal;
+      text-align: center; }
+
+.grayscale {
+  background: gray;
+  color: black; }
+
 /*********************************************
  * HEADERS
  *********************************************/
@@ -160,8 +180,10 @@ body {
 
 .reveal .progress span {
   background: #01a9b4;
-  -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  -o-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+  /*
+  		-webkit-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  		   -moz-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  		    -ms-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  		     -o-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  		        transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  */ }
