--- a/css/theme/scss/_theme.scss
+++ b/css/theme/scss/_theme.scss
@@ -30,6 +30,29 @@ body {
 
 .reveal pre .regexp { color: #4d4d4c; }
 
+table.code-compare {
+	position: relative;
+	left: -180px;
+	width: 1300px;
+	td {
+		width: 800px;
+		p {
+			margin-left: 30px;
+			font-weight: bold;
+		}
+		.output-example {
+			padding: 10px;
+			width: 380px;
+			height: 80px;
+			font-weight: normal;
+			text-align: center;
+		}
+	}
+}
+.grayscale {
+	background: grayscale(#f00);
+	color: grayscale(darken(#f00, 50%));
+}
 /*********************************************
  * HEADERS
  *********************************************/
@@ -168,12 +191,12 @@ body {
 }
 	.reveal .progress span {
 		background: $linkColor;
-
+/*
 		-webkit-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 		   -moz-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 		    -ms-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 		     -o-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 		        transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
-	}
+*/	}
 
 
