--- a/css/theme/scss/gdidefault.scss
+++ b/css/theme/scss/gdidefault.scss
@@ -1,22 +1,17 @@
 // Default mixins and settings -----------------
-@import "../template/mixins";
-@import "../template/settings";
+@import "_mixins";
+@import "_settings";
 // ---------------------------------------------
 
-
 // Override theme settings (see ../template/settings.scss)
-$mainColor: #333;
-$headingColor: #8B0036;
-$backgroundColor: #92BB44;
 $linkColor: #01A9B4;
-$selectionBackgroundColor: #134674;
-
 // Background generator
 @mixin bodyBackground() {
-	@include radial-gradient( lighten($backgroundColor, 40% ), #f7fbfc );
+	@include radial-gradient( rgba(28,30,32,1), rgba(85,90,95,1) );
 }
 
 
+
 // Theme template ------------------------------
-@import "../template/theme";
+@import "_theme";
 // ---------------------------------------------
