--- a/css/theme/css/gdilight.css
+++ b/css/theme/css/gdilight.css
@@ -74,6 +74,30 @@ table.code-compare {
   background: gray;
   color: black; }
 
+blockquote.quote {
+  margin-top: 1em;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  text-align: left;
+  box-shadow: none; }
+
+cite {
+  float: right;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.75em;
+  color: grey; }
+
+.reveal .giant {
+  margin-top: 1em;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2em;
+  line-height: 1.75em; }
+  .reveal .giant strong {
+    font-size: 2.1em; }
+
+.reveal code {
+  max-height: 500px; }
+
 /*********************************************
  * HEADERS
  *********************************************/
@@ -83,7 +107,7 @@ table.code-compare {
 .reveal h4,
 .reveal h5,
 .reveal h6 {
-  margin: 10px 0 20px 0;
+  margin: 0.25em 0;
   color: #f05b62;
   font-family: "Montserrat", sans-serif;
   line-height: 0.9em;
@@ -95,8 +119,7 @@ table.code-compare {
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2); }
 
 .reveal h3 {
-  font-size: 1.25em;
-  margin-bottom: 5px; }
+  font-size: 1.25em; }
 
 /*********************************************
  * LINKS
