--- a/css/theme/gdicool.css
+++ b/css/theme/gdicool.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD:css/theme/gdicool.css
 @font-face {
   font-family: "Gotham";
   src: local("Gotham"), url("fonts/Gotham/Gotham-Medium.otf") format("opentype");
@@ -22,23 +21,11 @@
   src: local("Gotham-Bold"), url("fonts/Gotham/Gotham-Bold.otf") format("opentype");
   font-weight: bold;
   font-style: bold; }
-=======
-/**
- * Sky theme for reveal.js.
- *
- * Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
- */
-@import url(https://fonts.googleapis.com/css?family=Quicksand:400,700,400italic,700italic);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
-.reveal a {
-  line-height: 1.3em; }
->>>>>>> c2997c605d969ae46180f0a714802511bb89dbc7:css/theme/sky.css
 
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
 body {
-<<<<<<< HEAD:css/theme/gdicool.css
   background: #e9f1da;
   background: -moz-radial-gradient(center, circle cover, #f7fbfc 0%, #e9f1da 100%);
   background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #f7fbfc), color-stop(100%, #e9f1da));
@@ -47,47 +34,25 @@ body {
   background: -ms-radial-gradient(center, circle cover, #f7fbfc 0%, #e9f1da 100%);
   background: radial-gradient(center, circle cover, #f7fbfc 0%, #e9f1da 100%);
   background-color: #92bb44; }
-=======
-  background: #add9e4;
-  background: -moz-radial-gradient(center, circle cover, #f7fbfc 0%, #add9e4 100%);
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #f7fbfc), color-stop(100%, #add9e4));
-  background: -webkit-radial-gradient(center, circle cover, #f7fbfc 0%, #add9e4 100%);
-  background: -o-radial-gradient(center, circle cover, #f7fbfc 0%, #add9e4 100%);
-  background: -ms-radial-gradient(center, circle cover, #f7fbfc 0%, #add9e4 100%);
-  background: radial-gradient(center, circle cover, #f7fbfc 0%, #add9e4 100%);
-  background-color: #f7fbfc; }
->>>>>>> c2997c605d969ae46180f0a714802511bb89dbc7:css/theme/sky.css
 
 .reveal {
   font-family: "Gotham-Book", "Helvetica", Arial, sans-serif;
   font-size: 36px;
-<<<<<<< HEAD:css/theme/gdicool.css
   font-weight: 200;
   letter-spacing: -0.02em;
   color: #333333; }
-=======
-  font-weight: normal;
-  color: #333; }
->>>>>>> c2997c605d969ae46180f0a714802511bb89dbc7:css/theme/sky.css
 
 ::selection {
-  color: #fff;
+  color: white;
   background: #134674;
   text-shadow: none; }
 
-<<<<<<< HEAD:css/theme/gdicool.css
 .reveal pre code {
   font-size: 1.4em;
   line-height: 1.4em; }
 
 .reveal pre .regexp {
   color: #4d4d4c; }
-=======
-.reveal .slides > section,
-.reveal .slides > section > section {
-  line-height: 1.3;
-  font-weight: inherit; }
->>>>>>> c2997c605d969ae46180f0a714802511bb89dbc7:css/theme/sky.css
 
 /*********************************************
  * HEADERS
@@ -98,7 +63,6 @@ body {
 .reveal h4,
 .reveal h5,
 .reveal h6 {
-<<<<<<< HEAD:css/theme/gdicool.css
   margin: 10px 0 20px 0;
   color: #8b0036;
   font-family: "Montserrat", sans-serif;
@@ -113,174 +77,10 @@ body {
 .reveal h3 {
   font-size: 1.25em;
   margin-bottom: 5px; }
-=======
-  margin: 0 0 20px 0;
-  color: #333;
-  font-family: "Quicksand", sans-serif;
-  font-weight: normal;
-  line-height: 1.2;
-  letter-spacing: -0.08em;
-  text-transform: uppercase;
-  text-shadow: none;
-  word-wrap: break-word; }
-
-.reveal h1 {
-  font-size: 3.77em; }
-
-.reveal h2 {
-  font-size: 2.11em; }
-
-.reveal h3 {
-  font-size: 1.55em; }
-
-.reveal h4 {
-  font-size: 1em; }
-
-.reveal h1 {
-  text-shadow: none; }
-
-/*********************************************
- * OTHER
- *********************************************/
-.reveal p {
-  margin: 20px 0;
-  line-height: 1.3; }
-
-/* Ensure certain elements are never larger than the slide itself */
-.reveal img,
-.reveal video,
-.reveal iframe {
-  max-width: 95%;
-  max-height: 95%; }
-
-.reveal strong,
-.reveal b {
-  font-weight: bold; }
-
-.reveal em {
-  font-style: italic; }
-
-.reveal ol,
-.reveal dl,
-.reveal ul {
-  display: inline-block;
-  text-align: left;
-  margin: 0 0 0 1em; }
-
-.reveal ol {
-  list-style-type: decimal; }
-
-.reveal ul {
-  list-style-type: disc; }
-
-.reveal ul ul {
-  list-style-type: square; }
-
-.reveal ul ul ul {
-  list-style-type: circle; }
-
-.reveal ul ul,
-.reveal ul ol,
-.reveal ol ol,
-.reveal ol ul {
-  display: block;
-  margin-left: 40px; }
-
-.reveal dt {
-  font-weight: bold; }
-
-.reveal dd {
-  margin-left: 40px; }
-
-.reveal q,
-.reveal blockquote {
-  quotes: none; }
-
-.reveal blockquote {
-  display: block;
-  position: relative;
-  width: 70%;
-  margin: 20px auto;
-  padding: 5px;
-  font-style: italic;
-  background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }
-
-.reveal blockquote p:first-child,
-.reveal blockquote p:last-child {
-  display: inline-block; }
-
-.reveal q {
-  font-style: italic; }
-
-.reveal pre {
-  display: block;
-  position: relative;
-  width: 90%;
-  margin: 20px auto;
-  text-align: left;
-  font-size: 0.55em;
-  font-family: monospace;
-  line-height: 1.2em;
-  word-wrap: break-word;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
-
-.reveal code {
-  font-family: monospace; }
-
-.reveal pre code {
-  display: block;
-  padding: 5px;
-  overflow: auto;
-  max-height: 400px;
-  word-wrap: normal; }
-
-.reveal table {
-  margin: auto;
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-.reveal table th {
-  font-weight: bold; }
-
-.reveal table th,
-.reveal table td {
-  text-align: left;
-  padding: 0.2em 0.5em 0.2em 0.5em;
-  border-bottom: 1px solid; }
-
-.reveal table th[align="center"],
-.reveal table td[align="center"] {
-  text-align: center; }
-
-.reveal table th[align="right"],
-.reveal table td[align="right"] {
-  text-align: right; }
-
-.reveal table tbody tr:last-child th,
-.reveal table tbody tr:last-child td {
-  border-bottom: none; }
-
-.reveal sup {
-  vertical-align: super; }
-
-.reveal sub {
-  vertical-align: sub; }
-
-.reveal small {
-  display: inline-block;
-  font-size: 0.6em;
-  line-height: 1.2em;
-  vertical-align: top; }
-
-.reveal small * {
-  vertical-align: top; }
->>>>>>> c2997c605d969ae46180f0a714802511bb89dbc7:css/theme/sky.css
 
 /*********************************************
  * LINKS
  *********************************************/
-<<<<<<< HEAD:css/theme/gdicool.css
 .reveal a:not(.image) {
   color: #01a9b4;
   text-decoration: none;
@@ -292,35 +92,19 @@ body {
 
 .reveal a:not(.image):hover {
   color: #f9b8bb;
-=======
-.reveal a {
-  color: #3b759e;
-  text-decoration: none;
-  -webkit-transition: color .15s ease;
-  -moz-transition: color .15s ease;
-  transition: color .15s ease; }
-
-.reveal a:hover {
-  color: #74a7cb;
->>>>>>> c2997c605d969ae46180f0a714802511bb89dbc7:css/theme/sky.css
   text-shadow: none;
   border: none; }
 
 .reveal .roll span:after {
   color: #fff;
-<<<<<<< HEAD:css/theme/gdicool.css
   background: #01a9b4; }
-=======
-  background: #264c66; }
->>>>>>> c2997c605d969ae46180f0a714802511bb89dbc7:css/theme/sky.css
 
 /*********************************************
  * IMAGES
  *********************************************/
 .reveal section img {
-  margin: 15px 0px;
+  margin: 15px;
   background: rgba(255, 255, 255, 0.12);
-<<<<<<< HEAD:css/theme/gdicool.css
   border: 4px solid #333333;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
   -webkit-transition: all .2s linear;
@@ -335,29 +119,11 @@ body {
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
   border-color: #01a9b4;
-=======
-  border: 4px solid #333;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
-
-.reveal section img.plain {
-  border: 0;
-  box-shadow: none; }
-
-.reveal a img {
-  -webkit-transition: all .15s linear;
-  -moz-transition: all .15s linear;
-  transition: all .15s linear; }
-
-.reveal a:hover img {
-  background: rgba(255, 255, 255, 0.2);
-  border-color: #3b759e;
->>>>>>> c2997c605d969ae46180f0a714802511bb89dbc7:css/theme/sky.css
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
-<<<<<<< HEAD:css/theme/gdicool.css
 .reveal .controls div.left,
 .reveal .controls div.left.enabled {
   border-right-color: #01a9b4; }
@@ -385,35 +151,6 @@ body {
 
 .reveal .controls div.down.enabled:hover {
   border-top-color: #f9b8bb; }
-=======
-.reveal .controls .navigate-left,
-.reveal .controls .navigate-left.enabled {
-  border-right-color: #3b759e; }
-
-.reveal .controls .navigate-right,
-.reveal .controls .navigate-right.enabled {
-  border-left-color: #3b759e; }
-
-.reveal .controls .navigate-up,
-.reveal .controls .navigate-up.enabled {
-  border-bottom-color: #3b759e; }
-
-.reveal .controls .navigate-down,
-.reveal .controls .navigate-down.enabled {
-  border-top-color: #3b759e; }
-
-.reveal .controls .navigate-left.enabled:hover {
-  border-right-color: #74a7cb; }
-
-.reveal .controls .navigate-right.enabled:hover {
-  border-left-color: #74a7cb; }
-
-.reveal .controls .navigate-up.enabled:hover {
-  border-bottom-color: #74a7cb; }
-
-.reveal .controls .navigate-down.enabled:hover {
-  border-top-color: #74a7cb; }
->>>>>>> c2997c605d969ae46180f0a714802511bb89dbc7:css/theme/sky.css
 
 /*********************************************
  * PROGRESS BAR
@@ -425,9 +162,6 @@ body {
   background: #01a9b4;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-<<<<<<< HEAD:css/theme/gdicool.css
   -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -o-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-=======
->>>>>>> c2997c605d969ae46180f0a714802511bb89dbc7:css/theme/sky.css
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
